assignment_4/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CONST
    CHAN
    COND
    COM
    SELECT
    DEFER
    RANGE
    FALLTHROUGH
    ARROW
    ELLIPSIS
    GO
    MAP
    INTERFACE

Grammar

Rule 0     S' -> SourceFile
Rule 1     SourceFile -> PackageClause ImportDeclList TopLevelDeclList
Rule 2     SourceFile -> PackageClause ImportDeclList
Rule 3     SourceFile -> PackageClause TopLevelDeclList
Rule 4     SourceFile -> PackageClause
Rule 5     PackageClause -> PACKAGE ID SEMICOLON
Rule 6     ImportDeclList -> ImportDecl SEMICOLON
Rule 7     ImportDeclList -> ImportDeclList ImportDecl SEMICOLON
Rule 8     ImportDecl -> IMPORT LPAREN ImportSpecList RPAREN
Rule 9     ImportDecl -> IMPORT LPAREN RPAREN
Rule 10    ImportDecl -> IMPORT STRING
Rule 11    ImportSpecList -> STRING SEMICOLON
Rule 12    ImportSpecList -> ImportSpecList STRING SEMICOLON
Rule 13    TopLevelDeclList -> TopLevelDecl SEMICOLON
Rule 14    TopLevelDeclList -> TopLevelDeclList TopLevelDecl SEMICOLON
Rule 15    TopLevelDecl -> Declaration
Rule 16    TopLevelDecl -> FunctionDecl
Rule 17    StartScope -> <empty>
Rule 18    EndScope -> <empty>
Rule 19    StartStructScope -> <empty>
Rule 20    StartFuncScope -> <empty>
Rule 21    FunctionDecl -> FUNC ID StartFuncScope Signature EndScope
Rule 22    FunctionDecl -> FUNC ID StartFuncScope Signature Block EndScope
Rule 23    Declaration -> TypeDecl
Rule 24    Declaration -> VarDecl
Rule 25    TypeDecl -> TYPE TypeSpec
Rule 26    TypeDecl -> TYPE LPAREN TypeSpecList RPAREN
Rule 27    TypeDecl -> TYPE LPAREN RPAREN
Rule 28    TypeSpecList -> TypeSpec SEMICOLON
Rule 29    TypeSpecList -> TypeSpecList TypeSpec SEMICOLON
Rule 30    TypeSpec -> ID SaveTypeName ASSIGN Type
Rule 31    TypeSpec -> ID SaveTypeName Type
Rule 32    SaveTypeName -> <empty>
Rule 33    Type -> VARTYPE
Rule 34    Type -> LiteralType
Rule 35    Type -> ID
Rule 36    LiteralType -> ArrayType
Rule 37    LiteralType -> StructType
Rule 38    LiteralType -> PointerType
Rule 39    ArrayType -> LBRACK Expression RBRACK Type
Rule 40    StructType -> STRUCT StartStructScope LBRACE FieldDeclList RBRACE EndScope
Rule 41    StructType -> STRUCT StartStructScope LBRACE RBRACE EndScope
Rule 42    FieldDeclList -> FieldDecl SEMICOLON
Rule 43    FieldDeclList -> FieldDeclList FieldDecl SEMICOLON
Rule 44    FieldDecl -> IdentifierList Type STRING
Rule 45    FieldDecl -> IdentifierList Type
Rule 46    PointerType -> MUL Type
Rule 47    Signature -> Parameters
Rule 48    Signature -> Parameters Type
Rule 49    Parameters -> LPAREN RPAREN
Rule 50    Parameters -> LPAREN ParameterList RPAREN
Rule 51    Parameters -> LPAREN ParameterList COMMA RPAREN
Rule 52    ParameterList -> ParameterDecl
Rule 53    ParameterList -> ParameterList COMMA ParameterDecl
Rule 54    ParameterDecl -> IdentifierList Type
Rule 55    VarDecl -> VAR VarSpec
Rule 56    VarDecl -> VAR LPAREN VarSpecList RPAREN
Rule 57    VarDecl -> VAR LPAREN RPAREN
Rule 58    VarSpecList -> VarSpec SEMICOLON
Rule 59    VarSpecList -> VarSpecList VarSpec SEMICOLON
Rule 60    VarSpec -> IdentifierList Type
Rule 61    VarSpec -> IdentifierList ASSIGN ExpressionList
Rule 62    VarSpec -> IdentifierList Type ASSIGN ExpressionList
Rule 63    VarSpec -> IdentifierList ASSIGN LBRACE ExpressionList RBRACE
Rule 64    VarSpec -> IdentifierList Type ASSIGN LBRACE ExpressionList RBRACE
Rule 65    IdentifierList -> ID
Rule 66    IdentifierList -> IdentifierList COMMA ID
Rule 67    ShortVarDecl -> IdentifierList DEFINE ExpressionList
Rule 68    Block -> LBRACE StatementList RBRACE
Rule 69    Block -> LBRACE RBRACE
Rule 70    StatementList -> StatementList Statement SEMICOLON
Rule 71    StatementList -> Statement SEMICOLON
Rule 72    Statement -> Declaration
Rule 73    Statement -> SimpleStmt
Rule 74    Statement -> ReturnStmt
Rule 75    Statement -> BreakStmt
Rule 76    Statement -> ContinueStmt
Rule 77    Statement -> LabeledStmt
Rule 78    Statement -> GotoStmt
Rule 79    Statement -> StartScope Block EndScope
Rule 80    Statement -> IfStmt
Rule 81    Statement -> ForStmt
Rule 82    Statement -> SwitchStmt
Rule 83    SimpleStmt -> ShortVarDecl
Rule 84    SimpleStmt -> EmptyStmt
Rule 85    SimpleStmt -> ExpressionStmt
Rule 86    SimpleStmt -> IncDecStmt
Rule 87    SimpleStmt -> Assignment
Rule 88    EmptyStmt -> <empty>
Rule 89    ExpressionStmt -> Expression
Rule 90    IncDecStmt -> Expression INC
Rule 91    IncDecStmt -> Expression DEC
Rule 92    Assignment -> UnaryExpr assign_op Expression
Rule 93    ReturnStmt -> RETURN
Rule 94    ReturnStmt -> RETURN Expression
Rule 95    BreakStmt -> BREAK
Rule 96    BreakStmt -> BREAK ID
Rule 97    ContinueStmt -> CONTINUE
Rule 98    ContinueStmt -> CONTINUE ID
Rule 99    LabeledStmt -> ID COLON Statement
Rule 100   GotoStmt -> GOTO ID
Rule 101   IfStmt -> IF Expression StartScope Block EndScope
Rule 102   IfStmt -> IF Expression StartScope Block EndScope ELSE StartScope Block EndScope
Rule 103   IfStmt -> IF Expression StartScope Block EndScope ELSE IfStmt
Rule 104   ForStmt -> FOR ForSig StartScope Block EndScope
Rule 105   ForSig -> ForClause
Rule 106   Condition -> Expression
Rule 107   ForClause -> SimpleStmt SEMICOLON Condition SEMICOLON SimpleStmt
Rule 108   SwitchStmt -> ExprSwitchStmt
Rule 109   ExprSwitchStmt -> SWITCH Expression LBRACE ExprCaseClauseList RBRACE
Rule 110   ExprCaseClauseList -> ExprCaseClause
Rule 111   ExprCaseClauseList -> ExprCaseClauseList ExprCaseClause
Rule 112   ExprCaseClause -> ExprSwitchCase COLON StatementList
Rule 113   ExprSwitchCase -> DEFAULT
Rule 114   ExprSwitchCase -> CASE Expression
Rule 115   ExpressionList -> Expression
Rule 116   ExpressionList -> ExpressionList COMMA Expression
Rule 117   Expression -> Expression1
Rule 118   Expression1 -> Expression2
Rule 119   Expression1 -> Expression1 LOR Expression2
Rule 120   Expression2 -> Expression3
Rule 121   Expression2 -> Expression2 LAND Expression3
Rule 122   Expression3 -> Expression4
Rule 123   Expression3 -> Expression3 rel_op Expression4
Rule 124   Expression4 -> Expression5
Rule 125   Expression4 -> Expression4 add_op Expression5
Rule 126   Expression5 -> UnaryExpr
Rule 127   Expression5 -> Expression5 mul_op UnaryExpr
Rule 128   UnaryExpr -> PrimaryExpr
Rule 129   UnaryExpr -> unary_op UnaryExpr
Rule 130   PrimaryExpr -> Operand
Rule 131   PrimaryExpr -> PrimaryExpr Selector
Rule 132   Selector -> PERIOD ID
Rule 133   PrimaryExpr -> PrimaryExpr Index
Rule 134   Index -> LBRACK Expression RBRACK
Rule 135   PrimaryExpr -> PrimaryExpr Arguments
Rule 136   Arguments -> LPAREN RPAREN
Rule 137   Arguments -> LPAREN ExpressionList COMMA RPAREN
Rule 138   Arguments -> LPAREN ExpressionList RPAREN
Rule 139   Operand -> Literal
Rule 140   Operand -> ID
Rule 141   Operand -> LPAREN Expression RPAREN
Rule 142   Literal -> BasicLit
Rule 143   BasicLit -> INT
Rule 144   BasicLit -> FLOAT
Rule 145   BasicLit -> IMAG
Rule 146   BasicLit -> BOOLVAL
Rule 147   BasicLit -> RUNE
Rule 148   BasicLit -> STRING
Rule 149   assign_op -> ASSIGN
Rule 150   assign_op -> ADD_ASSIGN
Rule 151   assign_op -> SUB_ASSIGN
Rule 152   assign_op -> MUL_ASSIGN
Rule 153   assign_op -> QUO_ASSIGN
Rule 154   assign_op -> REM_ASSIGN
Rule 155   assign_op -> AND_ASSIGN
Rule 156   assign_op -> OR_ASSIGN
Rule 157   assign_op -> XOR_ASSIGN
Rule 158   assign_op -> SHL_ASSIGN
Rule 159   assign_op -> SHR_ASSIGN
Rule 160   assign_op -> AND_NOT_ASSIGN
Rule 161   rel_op -> EQL
Rule 162   rel_op -> NEQ
Rule 163   rel_op -> LSS
Rule 164   rel_op -> LEQ
Rule 165   rel_op -> GTR
Rule 166   rel_op -> GEQ
Rule 167   add_op -> ADD
Rule 168   add_op -> SUB
Rule 169   add_op -> OR
Rule 170   add_op -> XOR
Rule 171   mul_op -> MUL
Rule 172   mul_op -> QUO
Rule 173   mul_op -> REM
Rule 174   mul_op -> SHL
Rule 175   mul_op -> SHR
Rule 176   mul_op -> AND
Rule 177   mul_op -> AND_NOT
Rule 178   unary_op -> ADD
Rule 179   unary_op -> SUB
Rule 180   unary_op -> NOT
Rule 181   unary_op -> XOR
Rule 182   unary_op -> MUL
Rule 183   unary_op -> AND

Terminals, with rules where they appear

ADD                  : 167 178
ADD_ASSIGN           : 150
AND                  : 176 183
AND_ASSIGN           : 155
AND_NOT              : 177
AND_NOT_ASSIGN       : 160
ARROW                : 
ASSIGN               : 30 61 62 63 64 149
BOOLVAL              : 146
BREAK                : 95 96
CASE                 : 114
CHAN                 : 
COLON                : 99 112
COM                  : 
COMMA                : 51 53 66 116 137
COND                 : 
CONST                : 
CONTINUE             : 97 98
DEC                  : 91
DEFAULT              : 113
DEFER                : 
DEFINE               : 67
ELLIPSIS             : 
ELSE                 : 102 103
EQL                  : 161
FALLTHROUGH          : 
FLOAT                : 144
FOR                  : 104
FUNC                 : 21 22
GEQ                  : 166
GO                   : 
GOTO                 : 100
GTR                  : 165
ID                   : 5 21 22 30 31 35 65 66 96 98 99 100 132 140
IF                   : 101 102 103
IMAG                 : 145
IMPORT               : 8 9 10
INC                  : 90
INT                  : 143
INTERFACE            : 
LAND                 : 121
LBRACE               : 40 41 63 64 68 69 109
LBRACK               : 39 134
LEQ                  : 164
LOR                  : 119
LPAREN               : 8 9 26 27 49 50 51 56 57 136 137 138 141
LSS                  : 163
MAP                  : 
MUL                  : 46 171 182
MUL_ASSIGN           : 152
NEQ                  : 162
NOT                  : 180
OR                   : 169
OR_ASSIGN            : 156
PACKAGE              : 5
PERIOD               : 132
QUO                  : 172
QUO_ASSIGN           : 153
RANGE                : 
RBRACE               : 40 41 63 64 68 69 109
RBRACK               : 39 134
REM                  : 173
REM_ASSIGN           : 154
RETURN               : 93 94
RPAREN               : 8 9 26 27 49 50 51 56 57 136 137 138 141
RUNE                 : 147
SELECT               : 
SEMICOLON            : 5 6 7 11 12 13 14 28 29 42 43 58 59 70 71 107 107
SHL                  : 174
SHL_ASSIGN           : 158
SHR                  : 175
SHR_ASSIGN           : 159
STRING               : 10 11 12 44 148
STRUCT               : 40 41
SUB                  : 168 179
SUB_ASSIGN           : 151
SWITCH               : 109
TYPE                 : 25 26 27
VAR                  : 55 56 57
VARTYPE              : 33
XOR                  : 170 181
XOR_ASSIGN           : 157
error                : 

Nonterminals, with rules where they appear

Arguments            : 135
ArrayType            : 36
Assignment           : 87
BasicLit             : 142
Block                : 22 79 101 102 102 103 104
BreakStmt            : 75
Condition            : 107
ContinueStmt         : 76
Declaration          : 15 72
EmptyStmt            : 84
EndScope             : 21 22 40 41 79 101 102 102 103 104
ExprCaseClause       : 110 111
ExprCaseClauseList   : 109 111
ExprSwitchCase       : 112
ExprSwitchStmt       : 108
Expression           : 39 89 90 91 92 94 101 102 103 106 109 114 115 116 134 141
Expression1          : 117 119
Expression2          : 118 119 121
Expression3          : 120 121 123
Expression4          : 122 123 125
Expression5          : 124 125 127
ExpressionList       : 61 62 63 64 67 116 137 138
ExpressionStmt       : 85
FieldDecl            : 42 43
FieldDeclList        : 40 43
ForClause            : 105
ForSig               : 104
ForStmt              : 81
FunctionDecl         : 16
GotoStmt             : 78
IdentifierList       : 44 45 54 60 61 62 63 64 66 67
IfStmt               : 80 103
ImportDecl           : 6 7
ImportDeclList       : 1 2 7
ImportSpecList       : 8 12
IncDecStmt           : 86
Index                : 133
LabeledStmt          : 77
Literal              : 139
LiteralType          : 34
Operand              : 130
PackageClause        : 1 2 3 4
ParameterDecl        : 52 53
ParameterList        : 50 51 53
Parameters           : 47 48
PointerType          : 38
PrimaryExpr          : 128 131 133 135
ReturnStmt           : 74
SaveTypeName         : 30 31
Selector             : 131
ShortVarDecl         : 83
Signature            : 21 22
SimpleStmt           : 73 107 107
SourceFile           : 0
StartFuncScope       : 21 22
StartScope           : 79 101 102 102 103 104
StartStructScope     : 40 41
Statement            : 70 71 99
StatementList        : 68 70 112
StructType           : 37
SwitchStmt           : 82
TopLevelDecl         : 13 14
TopLevelDeclList     : 1 3 14
Type                 : 30 31 39 44 45 46 48 54 60 62 64
TypeDecl             : 23
TypeSpec             : 25 28 29
TypeSpecList         : 26 29
UnaryExpr            : 92 126 127 129
VarDecl              : 24
VarSpec              : 55 58 59
VarSpecList          : 56 59
add_op               : 125
assign_op            : 92
mul_op               : 127
rel_op               : 123
unary_op             : 129

Parsing method: LALR

state 0

    (0) S' -> . SourceFile
    (1) SourceFile -> . PackageClause ImportDeclList TopLevelDeclList
    (2) SourceFile -> . PackageClause ImportDeclList
    (3) SourceFile -> . PackageClause TopLevelDeclList
    (4) SourceFile -> . PackageClause
    (5) PackageClause -> . PACKAGE ID SEMICOLON

    PACKAGE         shift and go to state 2

    PackageClause                  shift and go to state 1
    SourceFile                     shift and go to state 3

state 1

    (1) SourceFile -> PackageClause . ImportDeclList TopLevelDeclList
    (2) SourceFile -> PackageClause . ImportDeclList
    (3) SourceFile -> PackageClause . TopLevelDeclList
    (4) SourceFile -> PackageClause .
    (6) ImportDeclList -> . ImportDecl SEMICOLON
    (7) ImportDeclList -> . ImportDeclList ImportDecl SEMICOLON
    (13) TopLevelDeclList -> . TopLevelDecl SEMICOLON
    (14) TopLevelDeclList -> . TopLevelDeclList TopLevelDecl SEMICOLON
    (8) ImportDecl -> . IMPORT LPAREN ImportSpecList RPAREN
    (9) ImportDecl -> . IMPORT LPAREN RPAREN
    (10) ImportDecl -> . IMPORT STRING
    (15) TopLevelDecl -> . Declaration
    (16) TopLevelDecl -> . FunctionDecl
    (23) Declaration -> . TypeDecl
    (24) Declaration -> . VarDecl
    (21) FunctionDecl -> . FUNC ID StartFuncScope Signature EndScope
    (22) FunctionDecl -> . FUNC ID StartFuncScope Signature Block EndScope
    (25) TypeDecl -> . TYPE TypeSpec
    (26) TypeDecl -> . TYPE LPAREN TypeSpecList RPAREN
    (27) TypeDecl -> . TYPE LPAREN RPAREN
    (55) VarDecl -> . VAR VarSpec
    (56) VarDecl -> . VAR LPAREN VarSpecList RPAREN
    (57) VarDecl -> . VAR LPAREN RPAREN

    $end            reduce using rule 4 (SourceFile -> PackageClause .)
    IMPORT          shift and go to state 9
    FUNC            shift and go to state 12
    TYPE            shift and go to state 15
    VAR             shift and go to state 13

    TypeDecl                       shift and go to state 10
    VarDecl                        shift and go to state 14
    FunctionDecl                   shift and go to state 4
    TopLevelDecl                   shift and go to state 5
    ImportDeclList                 shift and go to state 11
    Declaration                    shift and go to state 8
    ImportDecl                     shift and go to state 6
    TopLevelDeclList               shift and go to state 7

state 2

    (5) PackageClause -> PACKAGE . ID SEMICOLON

    ID              shift and go to state 16


state 3

    (0) S' -> SourceFile .



state 4

    (16) TopLevelDecl -> FunctionDecl .

    SEMICOLON       reduce using rule 16 (TopLevelDecl -> FunctionDecl .)


state 5

    (13) TopLevelDeclList -> TopLevelDecl . SEMICOLON

    SEMICOLON       shift and go to state 17


state 6

    (6) ImportDeclList -> ImportDecl . SEMICOLON

    SEMICOLON       shift and go to state 18


state 7

    (3) SourceFile -> PackageClause TopLevelDeclList .
    (14) TopLevelDeclList -> TopLevelDeclList . TopLevelDecl SEMICOLON
    (15) TopLevelDecl -> . Declaration
    (16) TopLevelDecl -> . FunctionDecl
    (23) Declaration -> . TypeDecl
    (24) Declaration -> . VarDecl
    (21) FunctionDecl -> . FUNC ID StartFuncScope Signature EndScope
    (22) FunctionDecl -> . FUNC ID StartFuncScope Signature Block EndScope
    (25) TypeDecl -> . TYPE TypeSpec
    (26) TypeDecl -> . TYPE LPAREN TypeSpecList RPAREN
    (27) TypeDecl -> . TYPE LPAREN RPAREN
    (55) VarDecl -> . VAR VarSpec
    (56) VarDecl -> . VAR LPAREN VarSpecList RPAREN
    (57) VarDecl -> . VAR LPAREN RPAREN

    $end            reduce using rule 3 (SourceFile -> PackageClause TopLevelDeclList .)
    FUNC            shift and go to state 12
    TYPE            shift and go to state 15
    VAR             shift and go to state 13

    TypeDecl                       shift and go to state 10
    VarDecl                        shift and go to state 14
    FunctionDecl                   shift and go to state 4
    TopLevelDecl                   shift and go to state 19
    Declaration                    shift and go to state 8

state 8

    (15) TopLevelDecl -> Declaration .

    SEMICOLON       reduce using rule 15 (TopLevelDecl -> Declaration .)


state 9

    (8) ImportDecl -> IMPORT . LPAREN ImportSpecList RPAREN
    (9) ImportDecl -> IMPORT . LPAREN RPAREN
    (10) ImportDecl -> IMPORT . STRING

    LPAREN          shift and go to state 21
    STRING          shift and go to state 20


state 10

    (23) Declaration -> TypeDecl .

    SEMICOLON       reduce using rule 23 (Declaration -> TypeDecl .)


state 11

    (1) SourceFile -> PackageClause ImportDeclList . TopLevelDeclList
    (2) SourceFile -> PackageClause ImportDeclList .
    (7) ImportDeclList -> ImportDeclList . ImportDecl SEMICOLON
    (13) TopLevelDeclList -> . TopLevelDecl SEMICOLON
    (14) TopLevelDeclList -> . TopLevelDeclList TopLevelDecl SEMICOLON
    (8) ImportDecl -> . IMPORT LPAREN ImportSpecList RPAREN
    (9) ImportDecl -> . IMPORT LPAREN RPAREN
    (10) ImportDecl -> . IMPORT STRING
    (15) TopLevelDecl -> . Declaration
    (16) TopLevelDecl -> . FunctionDecl
    (23) Declaration -> . TypeDecl
    (24) Declaration -> . VarDecl
    (21) FunctionDecl -> . FUNC ID StartFuncScope Signature EndScope
    (22) FunctionDecl -> . FUNC ID StartFuncScope Signature Block EndScope
    (25) TypeDecl -> . TYPE TypeSpec
    (26) TypeDecl -> . TYPE LPAREN TypeSpecList RPAREN
    (27) TypeDecl -> . TYPE LPAREN RPAREN
    (55) VarDecl -> . VAR VarSpec
    (56) VarDecl -> . VAR LPAREN VarSpecList RPAREN
    (57) VarDecl -> . VAR LPAREN RPAREN

    $end            reduce using rule 2 (SourceFile -> PackageClause ImportDeclList .)
    IMPORT          shift and go to state 9
    FUNC            shift and go to state 12
    TYPE            shift and go to state 15
    VAR             shift and go to state 13

    TypeDecl                       shift and go to state 10
    VarDecl                        shift and go to state 14
    FunctionDecl                   shift and go to state 4
    TopLevelDecl                   shift and go to state 5
    Declaration                    shift and go to state 8
    ImportDecl                     shift and go to state 22
    TopLevelDeclList               shift and go to state 23

state 12

    (21) FunctionDecl -> FUNC . ID StartFuncScope Signature EndScope
    (22) FunctionDecl -> FUNC . ID StartFuncScope Signature Block EndScope

    ID              shift and go to state 24


state 13

    (55) VarDecl -> VAR . VarSpec
    (56) VarDecl -> VAR . LPAREN VarSpecList RPAREN
    (57) VarDecl -> VAR . LPAREN RPAREN
    (60) VarSpec -> . IdentifierList Type
    (61) VarSpec -> . IdentifierList ASSIGN ExpressionList
    (62) VarSpec -> . IdentifierList Type ASSIGN ExpressionList
    (63) VarSpec -> . IdentifierList ASSIGN LBRACE ExpressionList RBRACE
    (64) VarSpec -> . IdentifierList Type ASSIGN LBRACE ExpressionList RBRACE
    (65) IdentifierList -> . ID
    (66) IdentifierList -> . IdentifierList COMMA ID

    LPAREN          shift and go to state 27
    ID              shift and go to state 25

    VarSpec                        shift and go to state 26
    IdentifierList                 shift and go to state 28

state 14

    (24) Declaration -> VarDecl .

    SEMICOLON       reduce using rule 24 (Declaration -> VarDecl .)


state 15

    (25) TypeDecl -> TYPE . TypeSpec
    (26) TypeDecl -> TYPE . LPAREN TypeSpecList RPAREN
    (27) TypeDecl -> TYPE . LPAREN RPAREN
    (30) TypeSpec -> . ID SaveTypeName ASSIGN Type
    (31) TypeSpec -> . ID SaveTypeName Type

    LPAREN          shift and go to state 29
    ID              shift and go to state 31

    TypeSpec                       shift and go to state 30

state 16

    (5) PackageClause -> PACKAGE ID . SEMICOLON

    SEMICOLON       shift and go to state 32


state 17

    (13) TopLevelDeclList -> TopLevelDecl SEMICOLON .

    FUNC            reduce using rule 13 (TopLevelDeclList -> TopLevelDecl SEMICOLON .)
    TYPE            reduce using rule 13 (TopLevelDeclList -> TopLevelDecl SEMICOLON .)
    VAR             reduce using rule 13 (TopLevelDeclList -> TopLevelDecl SEMICOLON .)
    $end            reduce using rule 13 (TopLevelDeclList -> TopLevelDecl SEMICOLON .)


state 18

    (6) ImportDeclList -> ImportDecl SEMICOLON .

    IMPORT          reduce using rule 6 (ImportDeclList -> ImportDecl SEMICOLON .)
    FUNC            reduce using rule 6 (ImportDeclList -> ImportDecl SEMICOLON .)
    TYPE            reduce using rule 6 (ImportDeclList -> ImportDecl SEMICOLON .)
    VAR             reduce using rule 6 (ImportDeclList -> ImportDecl SEMICOLON .)
    $end            reduce using rule 6 (ImportDeclList -> ImportDecl SEMICOLON .)


state 19

    (14) TopLevelDeclList -> TopLevelDeclList TopLevelDecl . SEMICOLON

    SEMICOLON       shift and go to state 33


state 20

    (10) ImportDecl -> IMPORT STRING .

    SEMICOLON       reduce using rule 10 (ImportDecl -> IMPORT STRING .)


state 21

    (8) ImportDecl -> IMPORT LPAREN . ImportSpecList RPAREN
    (9) ImportDecl -> IMPORT LPAREN . RPAREN
    (11) ImportSpecList -> . STRING SEMICOLON
    (12) ImportSpecList -> . ImportSpecList STRING SEMICOLON

    RPAREN          shift and go to state 34
    STRING          shift and go to state 35

    ImportSpecList                 shift and go to state 36

state 22

    (7) ImportDeclList -> ImportDeclList ImportDecl . SEMICOLON

    SEMICOLON       shift and go to state 37


state 23

    (1) SourceFile -> PackageClause ImportDeclList TopLevelDeclList .
    (14) TopLevelDeclList -> TopLevelDeclList . TopLevelDecl SEMICOLON
    (15) TopLevelDecl -> . Declaration
    (16) TopLevelDecl -> . FunctionDecl
    (23) Declaration -> . TypeDecl
    (24) Declaration -> . VarDecl
    (21) FunctionDecl -> . FUNC ID StartFuncScope Signature EndScope
    (22) FunctionDecl -> . FUNC ID StartFuncScope Signature Block EndScope
    (25) TypeDecl -> . TYPE TypeSpec
    (26) TypeDecl -> . TYPE LPAREN TypeSpecList RPAREN
    (27) TypeDecl -> . TYPE LPAREN RPAREN
    (55) VarDecl -> . VAR VarSpec
    (56) VarDecl -> . VAR LPAREN VarSpecList RPAREN
    (57) VarDecl -> . VAR LPAREN RPAREN

    $end            reduce using rule 1 (SourceFile -> PackageClause ImportDeclList TopLevelDeclList .)
    FUNC            shift and go to state 12
    TYPE            shift and go to state 15
    VAR             shift and go to state 13

    TypeDecl                       shift and go to state 10
    VarDecl                        shift and go to state 14
    FunctionDecl                   shift and go to state 4
    TopLevelDecl                   shift and go to state 19
    Declaration                    shift and go to state 8

state 24

    (21) FunctionDecl -> FUNC ID . StartFuncScope Signature EndScope
    (22) FunctionDecl -> FUNC ID . StartFuncScope Signature Block EndScope
    (20) StartFuncScope -> .

    LPAREN          reduce using rule 20 (StartFuncScope -> .)

    StartFuncScope                 shift and go to state 38

state 25

    (65) IdentifierList -> ID .

    COMMA           reduce using rule 65 (IdentifierList -> ID .)
    VARTYPE         reduce using rule 65 (IdentifierList -> ID .)
    ID              reduce using rule 65 (IdentifierList -> ID .)
    LBRACK          reduce using rule 65 (IdentifierList -> ID .)
    STRUCT          reduce using rule 65 (IdentifierList -> ID .)
    MUL             reduce using rule 65 (IdentifierList -> ID .)
    ASSIGN          reduce using rule 65 (IdentifierList -> ID .)


state 26

    (55) VarDecl -> VAR VarSpec .

    SEMICOLON       reduce using rule 55 (VarDecl -> VAR VarSpec .)


state 27

    (56) VarDecl -> VAR LPAREN . VarSpecList RPAREN
    (57) VarDecl -> VAR LPAREN . RPAREN
    (58) VarSpecList -> . VarSpec SEMICOLON
    (59) VarSpecList -> . VarSpecList VarSpec SEMICOLON
    (60) VarSpec -> . IdentifierList Type
    (61) VarSpec -> . IdentifierList ASSIGN ExpressionList
    (62) VarSpec -> . IdentifierList Type ASSIGN ExpressionList
    (63) VarSpec -> . IdentifierList ASSIGN LBRACE ExpressionList RBRACE
    (64) VarSpec -> . IdentifierList Type ASSIGN LBRACE ExpressionList RBRACE
    (65) IdentifierList -> . ID
    (66) IdentifierList -> . IdentifierList COMMA ID

    RPAREN          shift and go to state 39
    ID              shift and go to state 25

    VarSpecList                    shift and go to state 41
    IdentifierList                 shift and go to state 28
    VarSpec                        shift and go to state 40

state 28

    (60) VarSpec -> IdentifierList . Type
    (61) VarSpec -> IdentifierList . ASSIGN ExpressionList
    (62) VarSpec -> IdentifierList . Type ASSIGN ExpressionList
    (63) VarSpec -> IdentifierList . ASSIGN LBRACE ExpressionList RBRACE
    (64) VarSpec -> IdentifierList . Type ASSIGN LBRACE ExpressionList RBRACE
    (66) IdentifierList -> IdentifierList . COMMA ID
    (33) Type -> . VARTYPE
    (34) Type -> . LiteralType
    (35) Type -> . ID
    (36) LiteralType -> . ArrayType
    (37) LiteralType -> . StructType
    (38) LiteralType -> . PointerType
    (39) ArrayType -> . LBRACK Expression RBRACK Type
    (40) StructType -> . STRUCT StartStructScope LBRACE FieldDeclList RBRACE EndScope
    (41) StructType -> . STRUCT StartStructScope LBRACE RBRACE EndScope
    (46) PointerType -> . MUL Type

    ASSIGN          shift and go to state 52
    COMMA           shift and go to state 50
    VARTYPE         shift and go to state 48
    ID              shift and go to state 47
    LBRACK          shift and go to state 45
    STRUCT          shift and go to state 53
    MUL             shift and go to state 44

    StructType                     shift and go to state 42
    LiteralType                    shift and go to state 43
    ArrayType                      shift and go to state 46
    PointerType                    shift and go to state 49
    Type                           shift and go to state 51

state 29

    (26) TypeDecl -> TYPE LPAREN . TypeSpecList RPAREN
    (27) TypeDecl -> TYPE LPAREN . RPAREN
    (28) TypeSpecList -> . TypeSpec SEMICOLON
    (29) TypeSpecList -> . TypeSpecList TypeSpec SEMICOLON
    (30) TypeSpec -> . ID SaveTypeName ASSIGN Type
    (31) TypeSpec -> . ID SaveTypeName Type

    RPAREN          shift and go to state 54
    ID              shift and go to state 31

    TypeSpec                       shift and go to state 56
    TypeSpecList                   shift and go to state 55

state 30

    (25) TypeDecl -> TYPE TypeSpec .

    SEMICOLON       reduce using rule 25 (TypeDecl -> TYPE TypeSpec .)


state 31

    (30) TypeSpec -> ID . SaveTypeName ASSIGN Type
    (31) TypeSpec -> ID . SaveTypeName Type
    (32) SaveTypeName -> .

    ASSIGN          reduce using rule 32 (SaveTypeName -> .)
    VARTYPE         reduce using rule 32 (SaveTypeName -> .)
    ID              reduce using rule 32 (SaveTypeName -> .)
    LBRACK          reduce using rule 32 (SaveTypeName -> .)
    STRUCT          reduce using rule 32 (SaveTypeName -> .)
    MUL             reduce using rule 32 (SaveTypeName -> .)

    SaveTypeName                   shift and go to state 57

state 32

    (5) PackageClause -> PACKAGE ID SEMICOLON .

    IMPORT          reduce using rule 5 (PackageClause -> PACKAGE ID SEMICOLON .)
    FUNC            reduce using rule 5 (PackageClause -> PACKAGE ID SEMICOLON .)
    TYPE            reduce using rule 5 (PackageClause -> PACKAGE ID SEMICOLON .)
    VAR             reduce using rule 5 (PackageClause -> PACKAGE ID SEMICOLON .)
    $end            reduce using rule 5 (PackageClause -> PACKAGE ID SEMICOLON .)


state 33

    (14) TopLevelDeclList -> TopLevelDeclList TopLevelDecl SEMICOLON .

    FUNC            reduce using rule 14 (TopLevelDeclList -> TopLevelDeclList TopLevelDecl SEMICOLON .)
    TYPE            reduce using rule 14 (TopLevelDeclList -> TopLevelDeclList TopLevelDecl SEMICOLON .)
    VAR             reduce using rule 14 (TopLevelDeclList -> TopLevelDeclList TopLevelDecl SEMICOLON .)
    $end            reduce using rule 14 (TopLevelDeclList -> TopLevelDeclList TopLevelDecl SEMICOLON .)


state 34

    (9) ImportDecl -> IMPORT LPAREN RPAREN .

    SEMICOLON       reduce using rule 9 (ImportDecl -> IMPORT LPAREN RPAREN .)


state 35

    (11) ImportSpecList -> STRING . SEMICOLON

    SEMICOLON       shift and go to state 58


state 36

    (8) ImportDecl -> IMPORT LPAREN ImportSpecList . RPAREN
    (12) ImportSpecList -> ImportSpecList . STRING SEMICOLON

    RPAREN          shift and go to state 59
    STRING          shift and go to state 60


state 37

    (7) ImportDeclList -> ImportDeclList ImportDecl SEMICOLON .

    IMPORT          reduce using rule 7 (ImportDeclList -> ImportDeclList ImportDecl SEMICOLON .)
    FUNC            reduce using rule 7 (ImportDeclList -> ImportDeclList ImportDecl SEMICOLON .)
    TYPE            reduce using rule 7 (ImportDeclList -> ImportDeclList ImportDecl SEMICOLON .)
    VAR             reduce using rule 7 (ImportDeclList -> ImportDeclList ImportDecl SEMICOLON .)
    $end            reduce using rule 7 (ImportDeclList -> ImportDeclList ImportDecl SEMICOLON .)


state 38
